<resources>

    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>


    <string name="app_name">siakadintek</string>
    <string name="sistem_informasi_akademik_sia">Sistem Informasi Akademik (SIA)</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_buatbiodata">Membuat Biodata Baru</string>
    <string name="title_activity_lihatbiodata">Melihat Biodata</string>
    <string name="title_activity_nilai">nilai</string>


    <string-array name="listmapel">
        <item>pilih</item>
        <item>matematika</item>
        <item>b.indonesia</item>
        <item>ipa</item>
        <item>ips</item>


    </string-array>
    <string name="title_activity_guru">guru</string>
    <string name="title_activity_siswa">siswa</string>
    <string name="title_activity_mapel">mapel</string>
    <string name="title_activity_about">about</string>
    <string name="title_activity_matapelajaran">mapel</string>
    <string name="title_activity_profil">profil</string>
    <string name="title_activity_biodatasiswa">biodatasiswa</string>
    <string name="title_activity_lihat_biodata">lihat_biodata</string>
    <string name="title_activity_biodataguru">biodataguru</string>
    <string name="title_activity_lihatbiodataguru">lihatbiodataguru</string>
    <string name="title_activity_listmapel">listmapel</string>
    <string name="title_activity_lihatmapel">lihatmapel</string>
    <string name="title_activity_buatnilai">buatnilai</string>
    <string name="title_activity_lihatnilai">lihatnilai</string>


</resources>