<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selamat Datang di Aplikasi"
        android:textColor="@android:color/holo_blue_light"
        android:textAlignment="center"
        android:textSize="27dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pengolahan Data Sistem Informasi Akademik di SMK Insan Teknologi"
        android:textColor="@android:color/holo_blue_light"
        android:textAlignment="center"
        android:textSize="27dp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_siswa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F44336"
            android:text="@string/title_activity_siswa"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btn_gr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#9C27B0"
            android:text="@string/title_activity_guru"
            android:textSize="25dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_nilai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2196F3"
            android:text="@string/title_activity_nilai"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_mapel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E91E63"
            android:text="@string/title_activity_matapelajaran"
            android:textSize="25sp"
            android:elevation="50dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
         <Button
            android:id="@+id/btn_profil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/title_activity_profil"
            android:textSize="25dp"/>

        <Button
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/title_activity_about"
            android:textSize="25sp"
            android:elevation="50dp"/>
    </LinearLayout>
</LinearLayout>
